fix contrast problems

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,6 +44,10 @@ body {
 	width: 20px;
 }
 
+.visually-hidden {
+	color: #000;
+}
+
 #about {
 	display: flex;
 	background-color: #F6D2B8;
